<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_inicio">

    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.android.appmadrid.ui.inicio.InicioFragment"
        android:label="@string/menu_inicio"
        tools:layout="@layout/fragment_inicio" >

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_buscar"
            app:destination="@id/nav_buscar"
            app:popUpTo="@id/nav_inicio" />
        <action
            android:id="@+id/action_nav_inicio_to_nav_cuenta"
            app:destination="@id/nav_cuenta"
            app:popUpTo="@id/nav_inicio" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.android.appmadrid.ui.inicio.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_inicio" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_buscar"
        android:name="com.android.appmadrid.ui.buscar.BuscarFragment"
        android:label="@string/menu_buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/nav_cuenta"
        android:name="com.android.appmadrid.ui.cuenta.CuentaFragment"
        android:label="@string/menu_cuenta"
        tools:layout="@layout/fragment_cuenta" />
</navigation>