<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cuenta.dialogoCambioUsuario">


    <EditText
        android:id="@+id/editText_nuevoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nuevoUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_passCambioUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passCambio"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_nuevoUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_nuevoUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editText_usuarioCambioUsuario" />

    <EditText
        android:id="@+id/editText_usuarioCambioUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/usuarioActual"
        app:layout_constraintEnd_toEndOf="@+id/editText_nuevoUsuario"
        app:layout_constraintStart_toStartOf="@+id/editText_nuevoUsuario"
        app:layout_constraintTop_toBottomOf="@+id/editText_nuevoUsuario" />
</androidx.constraintlayout.widget.ConstraintLayout>