<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cuenta.dialogoCambioPassword">

    <EditText
        android:id="@+id/editText_nuevaPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nuevaPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_passActual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passActual"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editText_nuevaPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_nuevaPass"
        app:layout_constraintTop_toBottomOf="@+id/editText_usuarioCambioPass" />

    <EditText
        android:id="@+id/editText_usuarioCambioPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/usuarioCambio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editText_nuevaPass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_nuevaPass"
        app:layout_constraintTop_toBottomOf="@+id/editText_nuevaPass" />

</androidx.constraintlayout.widget.ConstraintLayout>