<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrincipalInicioRegistro"
    android:background="@drawable/fondo">

    <View
        android:id="@+id/view_cuadroBlanco"
        android:layout_width="288dp"
        android:layout_height="427dp"
        android:background="#5EFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="200dp"
        android:layout_height="170dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/ic_logoapp"
        app:layout_constraintEnd_toEndOf="@+id/view_cuadroBlanco"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/view_cuadroBlanco"
        app:layout_constraintTop_toTopOf="@+id/view_cuadroBlanco" />

    <Button
        android:id="@+id/button_ir_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/boton_registro"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="@+id/view_cuadroBlanco"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toEndOf="@+id/button_ir_inicio"
        app:layout_constraintTop_toBottomOf="@+id/textView_slogan" />

    <Button
        android:id="@+id/button_ir_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/boton_inicio"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="@+id/view_cuadroBlanco"
        app:layout_constraintTop_toBottomOf="@+id/textView_slogan" />

    <TextView
        android:id="@+id/textView_slogan"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/slogan"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view_cuadroBlanco"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/view_cuadroBlanco"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>